<?xml version="1.0"?>
<package format="2">
  <name>graph_exploration</name>
  <version>1.0.0</version>
  <description>The graph_exploration package</description>

  <maintainer email="21b905005@stu.hit.edu.cn">Qiming Wang</maintainer>
  <license>BSD</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>boost</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>


  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can go here -->
  </export>
</package>
